--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <option value="./sounds/kick-classic.wav">Classic kick</option>
           <option value="./sounds/kick-808.wav">808 kick</option>
           <option value="./sounds/kick-heavy.wav">Kick Heavy</option>
+          <option value="./sounds/kick-softy.wav">Kick Softy</option>
         </select>
       </div>
       <div class="kick">
@@ -81,6 +82,10 @@
       </div>
     </div>
     <button class="play">Play</button>
+    <div class="tempo">
+      <input type="range" class="tempo-slider" max="300" min="20" value="150">
+      <p>Tempo: <span class="tempo-number"> 150 </span></p>
+    </div>
   </div>
 
   <audio class="kick-sound" src="sounds/kick-classic.wav"></audio>
